# dengue

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  settings.toml
dashboard/: metadata.yaml
dashboard/charts/: Daily_Rainfall_5.yaml  Release_Magnitude_and_Dates_1.yaml  SSTA_6.yaml  Temperature_4.yaml
dashboard/dashboards/: National_Dengue_1.yaml
dashboard/databases/: Dengue_DB.yaml
dashboard/datasets/Dengue_DB/: Rainfall.yaml  Release_Site.yaml  elnino34.yaml  temp_new.yaml
data/release_site/: hdb.xlsx  landed.xlsx  rct.xlsx
dengue/: __init__.py
dengue/data_injestion/: nino34.py  temperature.py
dengue/datasets/: __init__.py  population.sql
dengue/feature_engineering/: temp_rollmean_x_weeks.py  time_since_switch.py
dengue/features/: __init__.py  climate.py  serology.py
dengue/inla_model/: Dockerfile  config.yaml
dengue/metrics/: __init__.py
dengue/models/: __init__.py
dengue/utils/: __init__.py
experiments/cases/: 20100101_20221231.yaml
notebooks/: counterfactual_INLA.Rmd  insert_data.ipynb  model.ipynb  read_shapefile.ipynb
scripts/: README.md  insert_data.ipynb  train.py
scripts/data_injestion/: rainfall.py  release_data.py  temperature.py  utils.py
scripts/injestion/: __init__.py  nino34.py  rainfall.py  release_data.py  temperature.py
scripts/inla_model/: Dockerfile  README.md  predict.R
tables/: create_cases_table.sql  create_dengue_agg_table.sql  create_elnino34_table.sql  create_interventions.sql  create_rainfall_table.sql  create_release_sites.sql  create_temperature_table.sql
(+16 files in other folders)
