[tool.poetry]
name = "dengue"
version = "0.0.1"
description = "Package for Dengue Forecasting"
authors = ["etheleon <picy2k@gmail.com>"]
license = "GNU3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "<=1.26.4"
SQLAlchemy = "^2.0.36"
toml = "^0.10.2"
python-json-logger = "^2.0.7"
psycopg2-binary = "^2.9.10"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.flake8]
max-line-length = 120
extend-ignore = ["D203", "E203", "E251", "E266", "E302", "E305", "E401", "E402", "E501", "F401", "F403", "W503"]
exclude = [".git", "__pycache__", "dist"]
max-complexity = 10

[tool.isort]
atomic = true
profile = "black"
line_length = 120
skip_gitignore = true
